Update page title in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -16,14 +16,8 @@
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" />
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.10.0/js/bootstrap-select.min.js"></script>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.10.0/css/bootstrap-select.min.css" rel="stylesheet" />
-<script>
-  $(document).ready(function(){
-    var blah = "Competition: The competion page work perfectly but due the api being a free plan, the website is allowed data only from two seasons back. Team: Some teams do not show squad list due to the Api, for full experience choose a team from either the spanish or italian top division league";
-    alert(blah);
-});
-</script>
     
-    <title>Bolusport | Api sport app</title>
+    <title>THM Estatistica | Api sport app</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
